Fix rendering issues that occur when labels overflow LabelsModal

--- a/src/app/stylesheets/_modals.scss
+++ b/src/app/stylesheets/_modals.scss
@@ -99,6 +99,7 @@
 
   .label {
     margin: 6px 0;
+    white-space: nowrap;
 
     @extend %align-with-icon;
 
